--- a/templates/pico/dn.yaml.j2
+++ b/templates/pico/dn.yaml.j2
@@ -8,12 +8,18 @@ parameters:
   KeyName:
     description: Name of an existing ssh keypair
     type: string
+{%if create_network is equalto 1 %}
   PrivateNet:
     description: Private network for pnda deployment
     type: string
   PrivateSubnet:
     description: Private network for pnda deployment
     type: string
+  pnda_secgroup:
+    type: string
+  sec_group:
+    type: string
+{%endif%}
   Image:
     type: string
   name:
@@ -23,8 +29,6 @@ parameters:
   NodeIndex:
     type: number
     default: 0
-  sec_group:
-    type: string
   volume_size:
     type: number
     default: 200
@@ -32,8 +36,6 @@ parameters:
     type: string
     default: /dev/vdc
   cluster_name:
-    type: string
-  pnda_secgroup:
     type: string
   pnda_flavor:
     type: string
@@ -44,9 +46,16 @@ parameters:
   log_mountpoint:
     type: string
     default: /dev/vdb
+  signal_transport:
+    type: string
+    default: TEMP_URL_SIGNAL
+  software_config_transport:
+    type: string
+    default: POLL_TEMP_URL
 
 
 resources:
+{%if create_network is equalto 1 %}
   port:
     type: OS::Neutron::Port
     properties:
@@ -54,6 +63,7 @@ resources:
       fixed_ips:
         - subnet_id: { get_param: PrivateSubnet }
       security_groups: [{ get_param: sec_group }]
+{% endif %}
   install_config:
     type: OS::Heat::SoftwareConfig
     properties:
@@ -69,9 +79,11 @@ resources:
             $cloudera_role$: 'DATANODE'
   install_deployment:
     type: OS::Heat::SoftwareDeployment
+{%if create_volumes is equalto 1 %}
     depends_on: [ volume_attachment, logvolume_attachment ]
+{%endif%}
     properties:
-      signal_transport: TEMP_URL_SIGNAL
+      signal_transport: { get_param: signal_transport }
       config:
         get_resource: install_config
       server:
@@ -84,12 +96,15 @@ resources:
       image: { get_param: Image }
       flavor: { get_param: Flavor }
       key_name: { get_param: KeyName }
+{%if create_network is equalto 1 %}
       networks: [{ network: {get_param: PrivateNet}}]
       security_groups: [{ get_param: sec_group }, { get_param: pnda_secgroup }]
-      software_config_transport: POLL_TEMP_URL
+{% endif %}
+      software_config_transport: { get_param: software_config_transport }
       user_data_format: SOFTWARE_CONFIG
       config_drive: True
 
+{%if create_volumes is equalto 1 %}
   volume:
     type: OS::Cinder::Volume
     properties:
@@ -113,7 +128,7 @@ resources:
       volume_id: { get_resource: logvolume }
       instance_uuid: { get_resource: server }
       mountpoint: { get_param: log_mountpoint }
-
+{%endif%}
 
 outputs:
   port_resource:
