--- a/templates/pico/kafka.yaml.j2
+++ b/templates/pico/kafka.yaml.j2
@@ -2,60 +2,61 @@ heat_template_version: 2014-10-16
 
 parameters:
   Flavor:
-    description: Flavor of the manager1 server
+    description: Flavor of the kafka server
     type: string
-    default: m1.xlarge
+    default: m1.small
   KeyName:
     description: Name of an existing ssh keypair
     type: string
+{%if create_network is equalto 1 %}
   PrivateNet:
     description: Private network for pnda deployment
     type: string
   PrivateSubnet:
     description: Private network for pnda deployment
     type: string
+  pnda_secgroup:
+    type: string
+  sec_group:
+    type: string
+{%endif%}
   Image:
     type: string
   name:
     type: string
   SaltmasterIP:
     type: string
+  NodeIndex:
+    type: number
+    default: 0
   cluster_name:
-    type: string
-  pnda_secgroup:
     type: string
   pnda_flavor:
     type: string
-    default: standard 
+    default: standard
   logvolume_size:
     type: number
     default: 250
   log_mountpoint:
     type: string
     default: /dev/vdb
-
+  signal_transport:
+    type: string
+    default: TEMP_URL_SIGNAL
+  software_config_transport:
+    type: string
+    default: POLL_TEMP_URL
 
 resources:
-  sec_group:
-    type: OS::Neutron::SecurityGroup
-    properties:
-      description: CDH Manager SecurityGroup
-      name:
-        str_replace:
-          template:
-            cname-cdh-mgr1
-          params:
-            cname: { get_param: cluster_name }
-      rules:
-        - remote_ip_prefix: 0.0.0.0/0
-          protocol: icmp
+{%if create_network is equalto 1 %}
   port:
     type: OS::Neutron::Port
     properties:
       network: { get_param: PrivateNet }
       fixed_ips:
         - subnet_id: { get_param: PrivateSubnet }
-      security_groups: [{ get_resource: sec_group }, { get_param: pnda_secgroup }]
+      security_groups: [{ get_param: sec_group }, { get_param: pnda_secgroup }]
+{%endif%}
   install_config:
     type: OS::Heat::SoftwareConfig
     properties:
@@ -64,28 +65,30 @@ resources:
         str_replace:
           template: {get_file: scripts/base_install.sh }
           params:
-            $master_ip$: { get_param: SaltmasterIP }
-            $pnda_cluster$: { get_param: cluster_name }
             $flavor$: { get_param: pnda_flavor }
+            $master_ip$: { get_param: SaltmasterIP }
+            $brokerid$: { get_param: NodeIndex}
+            $pnda_cluster$: { get_param: cluster_name }
             $volume_dev$: { get_param: log_mountpoint }
-            $roles$: 'cloudera_namenode mysql_connector oozie_database hue opentsdb grafana'
-            $cloudera_role$: 'MGR01'
-            
+            $roles$: 'kafka kafka_manager platform_testing_general elk zookeeper'
   install_deployment:
     type: OS::Heat::SoftwareDeployment
+{%if create_volumes is equalto 1 %}
     depends_on: [ logvolume_attachment ]
+{%endif%}
     properties:
-      signal_transport: TEMP_URL_SIGNAL
+      signal_transport: { get_param: signal_transport }
       config:
         get_resource: install_config
       server:
         get_resource: server
 
+{%if create_volumes is equalto 1 %}
   logvolume:
     type: OS::Cinder::Volume
     properties:
       size: { get_param: logvolume_size }
-      description: Volume for manager1 logs
+      description: Volume for kafka logs
 
   logvolume_attachment:
     type: OS::Cinder::VolumeAttachment
@@ -93,23 +96,40 @@ resources:
       volume_id: { get_resource: logvolume }
       instance_uuid: { get_resource: server }
       mountpoint: { get_param: log_mountpoint }
-
+{%endif%}
 
   server:
     type: OS::Nova::Server
     properties:
       name: { get_param: name }
       image: { get_param: Image }
-      flavor: { get_param: Flavor}
+      flavor: { get_param: Flavor }
       key_name: { get_param: KeyName }
+{%if create_network is equalto 1 %}
       networks:
         - port: { get_resource: port }
-      software_config_transport: POLL_TEMP_URL
+{%endif%}
+      software_config_transport: { get_param: software_config_transport }
       user_data_format: SOFTWARE_CONFIG
       config_drive: True
 
+
 outputs:
+  port_resource:
+    description: Heat resource handle for the Neutron port
+    value:
+      { get_resource: port }
   server_resource:
     description: Heat resource handle for the Nova compute server
     value:
       {get_resource: server}
+  hosts_entry:
+    description: >
+      Server's IP address and hostname in the /etc/hosts format
+    value:
+      str_replace:
+        template: |
+          PRIMARYIP PRIMARYHOST
+        params:
+          PRIMARYIP: {get_attr: [server, first_address]}
+          PRIMARYHOST: {get_attr: [server, name]}
