--- a/templates/pico/pnda_cluster.yaml.j2
+++ b/templates/pico/pnda_cluster.yaml.j2
@@ -35,8 +35,6 @@ parameters:
     description: Number of DATA nodes
     type: string
 
-
-
   DatanodeVolumeSize:
     default: 10
     type: number
@@ -44,6 +42,7 @@ parameters:
     default: /dev/vdc
     type: string
 
+{%if create_network is equalto 1 %}
   public_net:
     type: string
     description: >
@@ -52,6 +51,7 @@ parameters:
     type: string
   private_subnet:
     type: string
+{%endif%}
   KeyName:
     description: Name of an existing KeyPair to enable SSH access to the instances
     type: string
@@ -67,16 +67,25 @@ parameters:
     type: string
   SaltmasterIP:
     type: string
+{%if create_network is equalto 1 %}
   PndaSecGroup:
     type: string
   private_key:
     type: string
+{%endif%}
   BastionKeyName:
     type: string
   deployment_name:
     type: string
+  signal_transport:
+    type: string
+    default: TEMP_URL_SIGNAL
+  software_config_transport:
+    type: string
+    default: POLL_TEMP_URL
 
 resources:
+{%if create_network is equalto 1 %}
   KafkaSecGroup:
     type: OS::Neutron::SecurityGroup
     properties:
@@ -97,7 +106,7 @@ resources:
         - remote_ip_prefix: 0.0.0.0/0
           protocol: tcp
           port_range_min: 443
-          port_range_max: 443          
+          port_range_max: 443
   DNSecGroup:
     type: OS::Neutron::SecurityGroup
     properties:
@@ -111,26 +120,30 @@ resources:
       rules:
         - remote_ip_prefix: 0.0.0.0/0
           protocol: icmp
-  
+{% endif %}
+{%if create_bastion is equalto 1 %}
   bastion:
     type: OS::Pnda::bastion
     properties:
       Flavor: { get_param: BastionFlavor }
       Image: { get_param: image_id }
-      KeyName: { get_param: BastionKeyName }
       name:
         str_replace:
           template: '%stackname%-bastion'
           params:
             '%stackname%': { get_param: deployment_name }
+{%if create_network is equalto 1 %}
       PrivateNet: { get_param: private_net }
       PrivateSubnet: { get_param: private_subnet }
       PublicNet: { get_param: public_net }
-      SaltmasterIP: { get_param: SaltmasterIP }
       private_key: { get_param: private_key }
       pnda_secgroup: { get_param: PndaSecGroup }
+{% endif %}
+      KeyName: { get_param: BastionKeyName }
+      SaltmasterIP: { get_param: SaltmasterIP }
       cluster_name: { get_param: deployment_name }
       pnda_flavor: { get_param: PndaFlavor }
+{%endif%}
 
   kafka:
     type: OS::Heat::ResourceGroup
@@ -141,19 +154,21 @@ resources:
         properties:
           Flavor: { get_param: KafkaFlavor }
           Image: { get_param: image_id }
-          KeyName: { get_param: KeyName }
           name:
             str_replace:
               template: '%stackname%-kafka-%index%'
               params:
                 '%stackname%': { get_param: deployment_name }
           NodeIndex: '%index%'
+          SaltmasterIP: { get_param: SaltmasterIP }
+{%if create_network is equalto 1 %}
           PrivateNet: { get_param: private_net }
           PrivateSubnet: { get_param: private_subnet }
-          SaltmasterIP: { get_param: SaltmasterIP }
           sec_group: { get_resource: KafkaSecGroup }
-          cluster_name: { get_param: deployment_name }
           pnda_secgroup: { get_param: PndaSecGroup }
+{% endif %}
+          KeyName: { get_param: KeyName }
+          cluster_name: { get_param: deployment_name }
           pnda_flavor: { get_param: PndaFlavor }
 
   manager1:
@@ -161,34 +176,39 @@ resources:
     properties:
       Flavor: { get_param: Manager1Flavor }
       Image: { get_param: image_id }
-      KeyName: { get_param: KeyName }
       name:
         str_replace:
           template: '%stackname%-cdh-mgr1'
           params:
             '%stackname%': { get_param: deployment_name }
+{%if create_network is equalto 1 %}
       PrivateNet: { get_param: private_net }
       PrivateSubnet: { get_param: private_subnet }
-      SaltmasterIP: { get_param: SaltmasterIP }
       pnda_secgroup: { get_param: PndaSecGroup }
+{% endif %}
+      KeyName: { get_param: KeyName }
+      SaltmasterIP: { get_param: SaltmasterIP }
       cluster_name: { get_param: deployment_name }
       pnda_flavor: { get_param: PndaFlavor }
+
   edge:
     type: OS::Pnda::edge
     properties:
       Flavor: { get_param: EdgeFlavor }
       Image: { get_param: image_id }
-      KeyName: { get_param: KeyName }
       name:
         str_replace:
           template: '%stackname%-cdh-edge'
           params:
             '%stackname%': { get_param: deployment_name }
+{%if create_network is equalto 1 %}
       PrivateNet: { get_param: private_net }
       PrivateSubnet: { get_param: private_subnet }
-      SaltmasterIP: { get_param: SaltmasterIP }
-      cluster_name: { get_param: deployment_name }
       pnda_secgroup: { get_param: PndaSecGroup }
+{% endif %}
+      KeyName: { get_param: KeyName }
+      cluster_name: { get_param: deployment_name }
+      SaltmasterIP: { get_param: SaltmasterIP }
       pnda_flavor: { get_param: PndaFlavor }
   dn:
     type: OS::Heat::ResourceGroup
@@ -199,21 +219,23 @@ resources:
         properties:
           Flavor: { get_param: DatanodeFlavor }
           Image: { get_param: image_id }
-          KeyName: { get_param: KeyName }
           name:
             str_replace:
               template: '%stackname%-cdh-dn-%index%'
               params:
                 '%stackname%': { get_param: deployment_name }
           NodeIndex: '%index%'
+{%if create_network is equalto 1 %}
           PrivateNet: { get_param: private_net }
           PrivateSubnet: { get_param: private_subnet }
-          SaltmasterIP: { get_param: SaltmasterIP }
           sec_group: { get_resource: DNSecGroup }
           volume_size: { get_param: DatanodeVolumeSize }
           mountpoint: { get_param: DatanodeMountpoint }
-          cluster_name: { get_param: deployment_name }
           pnda_secgroup: { get_param: PndaSecGroup }
+{% endif %}
+          KeyName: { get_param: KeyName }
+          SaltmasterIP: { get_param: SaltmasterIP }
+          cluster_name: { get_param: deployment_name }
           pnda_flavor: { get_param: PndaFlavor }
 
 outputs:
