--- a/templates/pico/bastion.yaml.j2
+++ b/templates/pico/bastion.yaml.j2
@@ -23,17 +23,26 @@ parameters:
     type: string
   SaltmasterIP:
     type: string
-  private_key:
-    type: string
   cluster_name:
     type: string
   pnda_flavor:
     type: string
     default: standard
+{%if create_network is equalto 1 %}
+  private_key:
+    type: string
   pnda_secgroup:
     type: string
+{% endif %}
+  signal_transport:
+    type: string
+    default: TEMP_URL_SIGNAL
+  software_config_transport:
+    type: string
+    default: POLL_TEMP_URL
 
 resources:
+{%if create_network is equalto 1 %}
   sec_group:
     type: OS::Neutron::SecurityGroup
     properties:
@@ -64,7 +73,7 @@ resources:
     properties:
       floating_network_id: { get_param: PublicNet }
       port_id: { get_resource: port}
-
+{% endif %}
   install_config:
     type: OS::Heat::SoftwareConfig
     properties:
@@ -77,13 +86,15 @@ resources:
             $roles$: 'bastion'
             $master_ip$: { get_param: SaltmasterIP }
             $keyname$: { get_param: 'OS::stack_name' }
+{%if create_network is equalto 1 %}
             $private_key$: { get_param: private_key }
+{%endif%}
             $pnda_cluster$: { get_param: cluster_name }
   install_deployment:
     type: OS::Heat::SoftwareDeployment
     depends_on: bastion_deployment
     properties:
-      signal_transport: TEMP_URL_SIGNAL
+      signal_transport: { get_param: signal_transport }
       config:
         get_resource: install_config
       server:
@@ -97,27 +108,33 @@ resources:
         str_replace:
           template: {get_file: scripts/bastion_install.sh }
           params:
+{%if create_network is equalto 1 %}
             $private_key$: { get_param: private_key }
-            $keyname$: { get_param: 'OS::stack_name' }            
+{%endif%}
+            $keyname$: { get_param: 'OS::stack_name' }
   bastion_deployment:
     type: OS::Heat::SoftwareDeployment
     properties:
-      signal_transport: TEMP_URL_SIGNAL
+      signal_transport: { get_param: signal_transport }
       config:
         get_resource: bastion_config
       server:
         get_resource: server
   server:
     type: OS::Nova::Server
+{%if create_network is equalto 1 %}
     depends_on: floatingIP
+{%endif%}
     properties:
       name: { get_param: name }
       image: { get_param: Image }
       flavor: { get_param: Flavor}
       key_name: { get_param: KeyName }
+{%if create_network is equalto 1 %}
       networks:
         - port: { get_resource: port }
-      software_config_transport: POLL_TEMP_URL
+{% endif %}
+      software_config_transport: { get_param: software_config_transport }
       user_data_format: SOFTWARE_CONFIG
       config_drive: True
 
