--- a/templates/pico/edge.yaml.j2
+++ b/templates/pico/edge.yaml.j2
@@ -2,9 +2,9 @@ heat_template_version: 2014-10-16
 
 parameters:
   Flavor:
-    description: Flavor of the kafka server
+    description: Flavor of the edge server
     type: string
-    default: m1.small
+    default: m1.xlarge
   KeyName:
     description: Name of an existing ssh keypair
     type: string
@@ -23,8 +23,6 @@ parameters:
   NodeIndex:
     type: number
     default: 0
-  sec_group:
-    type: string
   cluster_name:
     type: string
   pnda_secgroup:
@@ -38,15 +36,37 @@ parameters:
   log_mountpoint:
     type: string
     default: /dev/vdb
+  signal_transport:
+    type: string
+    default: TEMP_URL_SIGNAL
+  software_config_transport:
+    type: string
+    default: POLL_TEMP_URL
 
 resources:
-  port:
-    type: OS::Neutron::Port
+{%if create_network is equalto 1 %}
+  sec_group:
+    type: OS::Neutron::SecurityGroup
     properties:
-      network: { get_param: PrivateNet }
-      fixed_ips:
-        - subnet_id: { get_param: PrivateSubnet }
-      security_groups: [{ get_param: sec_group }, { get_param: pnda_secgroup }]
+      description: Edge SecurityGroup
+      name:
+        str_replace:
+          template:
+            cname-edge
+          params :
+            cname: { get_param: cluster_name }
+      rules:
+        - remote_ip_prefix: 0.0.0.0/0
+          protocol: icmp
+        - remote_ip_prefix: 0.0.0.0/0
+          protocol: tcp
+          port_range_min: 22
+          port_range_max: 22
+        - remote_ip_prefix: 0.0.0.0/0
+          protocol: tcp
+          port_range_min: 8888
+          port_range_max: 8888
+{%endif%}
   install_config:
     type: OS::Heat::SoftwareConfig
     properties:
@@ -57,25 +77,38 @@ resources:
           params:
             $flavor$: { get_param: pnda_flavor }
             $master_ip$: { get_param: SaltmasterIP }
-            $brokerid$: { get_param: NodeIndex}
             $pnda_cluster$: { get_param: cluster_name }
             $volume_dev$: { get_param: log_mountpoint }
-            $roles$: 'kafka kafka_manager platform_testing_general elk zookeeper'
+            $roles$: 'cloudera_edge console_frontend console_backend_data_logger console_backend_data_manager graphite gobblin deployment_manager package_repository data_service impala-shell yarn-gateway hbase_opentsdb_tables hdfs_cleaner master_dataset elk logserver kibana_dashboard jupyter cloudera_manager platform_testing_cdh mysql_connector'
+            $cloudera_role$: 'EDGE'
+
   install_deployment:
     type: OS::Heat::SoftwareDeployment
+{%if create_volumes is equalto 1 %}
     depends_on: [ logvolume_attachment ]
+{%endif%}
     properties:
-      signal_transport: TEMP_URL_SIGNAL
+      signal_transport: { get_param: signal_transport }
       config:
         get_resource: install_config
       server:
         get_resource: server
 
+{%if create_network is equalto 1 %}
+  port:
+    type: OS::Neutron::Port
+    properties:
+      network: { get_param: PrivateNet }
+      fixed_ips:
+        - subnet_id: { get_param: PrivateSubnet }
+        security_groups: [{ get_resource: sec_group }, { get_param: pnda_secgroup }]
+{%endif%}
+{%if create_volumes is equalto 1 %}
   logvolume:
     type: OS::Cinder::Volume
     properties:
       size: { get_param: logvolume_size }
-      description: Volume for kafka logs
+      description: Volume for edge logs
 
   logvolume_attachment:
     type: OS::Cinder::VolumeAttachment
@@ -83,7 +116,7 @@ resources:
       volume_id: { get_resource: logvolume }
       instance_uuid: { get_resource: server }
       mountpoint: { get_param: log_mountpoint }
-
+{%endif%}
 
   server:
     type: OS::Nova::Server
@@ -92,12 +125,13 @@ resources:
       image: { get_param: Image }
       flavor: { get_param: Flavor }
       key_name: { get_param: KeyName }
-      networks:
-        - port: { get_resource: port }
-      software_config_transport: POLL_TEMP_URL
+{%if create_network is equalto 1 %}
+      networks: [{ network: {get_param: PrivateNet}}]
+      security_groups: [{ get_resource: sec_group }, { get_param: pnda_secgroup }]
+{%endif%}
+      software_config_transport: { get_param: software_config_transport }
       user_data_format: SOFTWARE_CONFIG
       config_drive: True
-
 
 outputs:
   port_resource:
