jinja-template: pass the user key pair name to the saltmaster
the key pair name for the salt master might be the user passed one in
case of a bare metal deployment

--- a/templates/pico/pnda.yaml.j2
+++ b/templates/pico/pnda.yaml.j2
@@ -102,6 +102,8 @@ resources:
       key_name: { get_resource: Key }
       networks:
         - port: { get_resource: saltmaster_port }
+  {%else%}
+      key_name: { get_param: KeyName }
   {%endif%}
       name:
         str_replace:
