--- a/templates/pico/pnda.yaml.j2
+++ b/templates/pico/pnda.yaml.j2
@@ -1,3 +1,10 @@
+# This flavor specific pnda.yaml defines a saltmaster to run the salt commands
+# defined in the base pnda.yaml and a pnda-cluster sub stack containing the 
+# rest of the instances
+
+# It is processed as a jinja2 template with the following parameters:
+#   - create_network: 0|1. Set to 1 to create network related resources or to 0 when running
+#                          for an openstack ironic bare-metal install
 
 parameters:
   SaltmasterFlavor:
