--- a/templates/pico/dn.yaml.j2
+++ b/templates/pico/dn.yaml.j2
@@ -40,9 +40,6 @@ parameters:
   volume_size:
     type: number
     default: 200
-  mountpoint:
-    type: string
-    default: /dev/vdc
   cluster_name:
     type: string
   pnda_flavor:
@@ -51,9 +48,6 @@ parameters:
   logvolume_size:
     type: number
     default: 10
-  log_mountpoint:
-    type: string
-    default: /dev/vdb
   signal_transport:
     type: string
     default: TEMP_URL_SIGNAL
@@ -83,7 +77,8 @@ resources:
             $flavor$: { get_param: pnda_flavor }
             $master_ip$: { get_param: SaltmasterIP }
             $pnda_cluster$: { get_param: cluster_name }
-            $volume_dev$: { get_param: log_mountpoint }
+            $log_volume_id$: { get_resource: logvolume }
+            $hdfs_volume_id$: { get_resource: volume }            
             $cloudera_role$: 'DATANODE'
   install_deployment:
     type: OS::Heat::SoftwareDeployment
@@ -120,10 +115,10 @@ resources:
       description: Volume for datanode
   volume_attachment:
     type: OS::Cinder::VolumeAttachment
+    depends_on: logvolume_attachment    
     properties:
       volume_id: { get_resource: volume }
       instance_uuid: { get_resource: server }
-      mountpoint: { get_param: mountpoint }
   logvolume:
     type: OS::Cinder::Volume
     properties:
@@ -131,11 +126,9 @@ resources:
       description: Volume for datanode logs
   logvolume_attachment:
     type: OS::Cinder::VolumeAttachment
-    depends_on: volume_attachment
     properties:
       volume_id: { get_resource: logvolume }
       instance_uuid: { get_resource: server }
-      mountpoint: { get_param: log_mountpoint }
 {%endif%}
 
 outputs:
