--- a/templates/pico/mgr1.yaml.j2
+++ b/templates/pico/mgr1.yaml.j2
@@ -40,9 +40,6 @@ parameters:
   logvolume_size:
     type: number
     default: 10
-  log_mountpoint:
-    type: string
-    default: /dev/vdb
   signal_transport:
     type: string
     default: TEMP_URL_SIGNAL
@@ -86,7 +83,7 @@ resources:
             $master_ip$: { get_param: SaltmasterIP }
             $pnda_cluster$: { get_param: cluster_name }
             $flavor$: { get_param: pnda_flavor }
-            $volume_dev$: { get_param: log_mountpoint }
+            $log_volume_id$: { get_resource: logvolume }
             $roles$: 'cloudera_namenode,mysql_connector,oozie_database,hue,opentsdb,grafana'
             $cloudera_role$: 'MGR01'
 
@@ -113,7 +110,6 @@ resources:
     properties:
       volume_id: { get_resource: logvolume }
       instance_uuid: { get_resource: server }
-      mountpoint: { get_param: log_mountpoint }
 {%endif%}
 
   server:
