This commit adds Anti Affinity hint to the nova scheduler.
Two types of Anti Affinity groups are being added:

1) Conditional Anti Affinity scheduler policy.

The conditional groups that have been added are:
- Kafka nodes for pnda
- Zookeeper nodes for pnda (Kafka)
- Data nodes for Hadoop

The condition for an AA group being defined for nodes is:
  if (nodes > 1 and hypervisor_count >= nodes)

If this condition is met an AA group will be created to hint the nova
scheduler and added during the server instantiation.

2) Fixed Anti Affinity scheduler policy.

Wherever there is redundancy for high availability of services, the anti
affinity policy should be enforced to avoid having those redundant
services relying on the same server.

VM                  MGR1    MGR2    MGR3    MGR4    EDGE    CM
--------------------------------------------------------------
oozie-s                                     x
zk-s                x       x               x
yarn-jh                                     x
master              x       x
hue-server                                  x
hdfs-httpfs                         x
hbase-restserver                    x
hbase-thriftserver                  x
hive-metastore                      x
hive-server                         x
yarn-rm             x       x
hdfs-nn             x       x
hdfs-jn             x       x               x
hbase-gw                                            x       x
--------------------------------------------------------------
AA Group            G1      G1              G1

The resulting services with an 'x' in MGR1/2/4 are considered HA service
which require anti-affinity.

- For defining G1, using the HzkAAGroup will sufficient the ensure
  anti-affinity of zk-s, master, yarn-rm, hdfs-nn and hdfs-jn spread
  over the MGR1, MGR2 and MGR4 VM's.

--- a/templates/standard/dn.yaml.j2
+++ b/templates/standard/dn.yaml.j2
@@ -1,4 +1,4 @@
-# Definition for the zookeeper instance type
+# Definition for the datanode instance type
 # Specifies which bootstrap script to run to set up this instance type and which roles
 # to apply to this instance type
 
@@ -6,9 +6,9 @@ heat_template_version: 2014-10-16
 
 parameters:
   Flavor:
-    description: Flavor of the zookeeper server
+    description: Flavor of the datanode server
     type: string
-    default: m1.small
+    default: m1.xlarge
   KeyName:
     description: Name of an existing ssh keypair
     type: string
@@ -29,20 +29,27 @@ parameters:
     default: 0
   sec_group:
     type: string
+  volume_size:
+    type: number
+    default: 50
   cluster_name:
     type: string
   pnda_secgroup:
     type: string
   pnda_flavor:
     type: string
-    default: standard
+    default: default
   logvolume_size:
     type: number
-    default: 500
+    default: 120
   signal_transport:
     type: string
   software_config_transport:
     type: string
+{%if create_datanodes_group is equalto 1 %}
+  scheduler_group_hint:
+    type: string
+{%endif%}
 
 resources:
   port:
@@ -51,7 +58,7 @@ resources:
       network: { get_param: PrivateNet }
       fixed_ips:
         - subnet_id: { get_param: PrivateSubnet }
-      security_groups: [{ get_param: sec_group }, { get_param: pnda_secgroup }]
+      security_groups: [{ get_param: sec_group }]
   install_config:
     type: OS::Heat::SoftwareConfig
     properties:
@@ -64,29 +71,17 @@ resources:
             $master_ip$: { get_param: SaltmasterIP }
             $pnda_cluster$: { get_param: cluster_name }
             $log_volume_id$: { get_resource: logvolume }
-            $roles$: 'zookeeper'
+            $hdfs_volume_id$: { get_resource: volume }
+            $cloudera_role$: 'DATANODE'
   install_deployment:
     type: OS::Heat::SoftwareDeployment
-    depends_on: [ logvolume_attachment ]
+    depends_on: [ volume_attachment, logvolume_attachment ]
     properties:
       signal_transport: { get_param: signal_transport }
       config:
         get_resource: install_config
       server:
         get_resource: server
-
-  logvolume:
-    type: OS::Cinder::Volume
-    properties:
-      size: { get_param: logvolume_size }
-      description: Volume for zookeeper logs
-
-  logvolume_attachment:
-    type: OS::Cinder::VolumeAttachment
-    properties:
-      volume_id: { get_resource: logvolume }
-      instance_uuid: { get_resource: server }
-
 
   server:
     type: OS::Nova::Server
@@ -95,11 +90,39 @@ resources:
       image: { get_param: Image }
       flavor: { get_param: Flavor }
       key_name: { get_param: KeyName }
-      networks:
-        - port: { get_resource: port }
+      networks: [{ network: {get_param: PrivateNet}}]
+      security_groups: [{ get_param: sec_group }, { get_param: pnda_secgroup }]
       software_config_transport: { get_param: software_config_transport }
       user_data_format: SOFTWARE_CONFIG
       config_drive: True
+{%if create_datanodes_group is equalto 1 %}
+      scheduler_hints: 
+        group: { get_param: scheduler_group_hint}
+{%endif%}
+
+
+  volume:
+    type: OS::Cinder::Volume
+    properties:
+      size: { get_param: volume_size }
+      description: Volume for datanode
+  volume_attachment:
+    type: OS::Cinder::VolumeAttachment
+    depends_on: logvolume_attachment
+    properties:
+      volume_id: { get_resource: volume }
+      instance_uuid: { get_resource: server }
+  logvolume:
+    type: OS::Cinder::Volume
+    properties:
+      size: { get_param: logvolume_size }
+      description: Volume for datanode logs
+  logvolume_attachment:
+    type: OS::Cinder::VolumeAttachment
+    properties:
+      volume_id: { get_resource: logvolume }
+      instance_uuid: { get_resource: server }
+
 
 outputs:
   port_resource:
