--- a/templates/standard/pnda_cluster.yaml.j2
+++ b/templates/standard/pnda_cluster.yaml.j2
@@ -139,6 +139,102 @@ parameters:
     default: POLL_TEMP_URL
 
 resources:
+  HbaseGwAAGroup:
+    type: OS::Nova::ServerGroup
+    properties:
+      name:
+        str_replace:
+          template:
+            cname-hbasegw-aagroup
+          params:
+            cname: { get_param: deployment_name }
+      policies: [anti-affinity]
+  HdfsNnAAGroup:
+    type: OS::Nova::ServerGroup
+    properties:
+      name:
+        str_replace:
+          template:
+            cname-hdfsnn-aagroup
+          params:
+            cname: { get_param: deployment_name }
+      policies: [anti-affinity]
+  HdfsJnAAGroup:
+    type: OS::Nova::ServerGroup
+    properties:
+      name:
+        str_replace:
+          template:
+            cname-hrfsjn-aagroup
+          params:
+            cname: { get_param: deployment_name }
+      policies: [anti-affinity]
+  HzkAAGroup:
+    type: OS::Nova::ServerGroup
+    properties:
+      name:
+        str_replace:
+          template:
+            cname-hzk-aagroup
+          params:
+            cname: { get_param: deployment_name }
+      policies: [anti-affinity]
+  MasterAAGroup:
+    type: OS::Nova::ServerGroup
+    properties:
+      name:
+        str_replace:
+          template:
+            cname-master-aagroup
+          params:
+            cname: { get_param: deployment_name }
+      policies: [anti-affinity]
+  YarnRmAAGroup:
+    type: OS::Nova::ServerGroup
+    properties:
+      name:
+        str_replace:
+          template:
+            cname-yarnrm-aagroup
+          params:
+            cname: { get_param: deployment_name }
+      policies: [anti-affinity]
+{%if create_zknodes_group is equalto 1 %}
+  ZkAAGroup:
+    type: OS::Nova::ServerGroup
+    properties:
+      name:
+        str_replace:
+          template:
+            cname-zknodes-aagroup
+          params:
+            cname: { get_param: deployment_name }
+      policies: [anti-affinity]
+{%endif%}
+{%if create_kafkanodes_group is equalto 1 %}
+  KafkaAAGroup:
+    type: OS::Nova::ServerGroup
+    properties:
+      name:
+        str_replace:
+          template:
+            cname-kafkanodes-aagroup
+          params:
+            cname: { get_param: deployment_name }
+      policies: [anti-affinity]
+{%endif%}
+{%if create_datanodes_group is equalto 1 %}
+  DataNodeAAGroup:
+    type: OS::Nova::ServerGroup
+    properties:
+      name:
+        str_replace:
+          template:
+            cname-datanodes-aagroup
+          params:
+            cname: { get_param: deployment_name }
+      policies: [anti-affinity]
+{%endif%}
   ZKSecGroup:
     type: OS::Neutron::SecurityGroup
     properties:
@@ -262,6 +358,9 @@ resources:
           cluster_name: { get_param: deployment_name }
           pnda_secgroup: { get_param: PndaSecGroup }
           pnda_flavor: { get_param: PndaFlavor }
+{%if create_zknodes_group is equalto 1 %}
+          scheduler_group_hint: { get_resource: ZkAAGroup}
+{%endif%}
   kafka:
     type: OS::Heat::ResourceGroup
     properties:
@@ -287,6 +386,9 @@ resources:
           cluster_name: { get_param: deployment_name }
           pnda_secgroup: { get_param: PndaSecGroup }
           pnda_flavor: { get_param: PndaFlavor }
+{%if create_kafkanodes_group is equalto 1 %}
+          scheduler_group_hint: { get_resource: KafkaAAGroup}
+{%endif%}
   tools:
     type: OS::Heat::ResourceGroup
     properties:
@@ -388,6 +490,7 @@ resources:
       pnda_secgroup: { get_param: PndaSecGroup }
       cluster_name: { get_param: deployment_name }
       pnda_flavor: { get_param: PndaFlavor }
+      scheduler_group_hint: { get_resource: HzkAAGroup}
   manager2:
     type: OS::Pnda::manager2
     properties:
@@ -407,6 +510,7 @@ resources:
       pnda_secgroup: { get_param: PndaSecGroup }
       cluster_name: { get_param: deployment_name }
       pnda_flavor: { get_param: PndaFlavor }
+      scheduler_group_hint: { get_resource: HzkAAGroup}
   manager3:
     type: OS::Pnda::manager3
     properties:
@@ -445,6 +549,7 @@ resources:
       pnda_secgroup: { get_param: PndaSecGroup }
       cluster_name: { get_param: deployment_name }
       pnda_flavor: { get_param: PndaFlavor }
+      scheduler_group_hint: { get_resource: HzkAAGroup}
   edge:
     type: OS::Pnda::edge
     properties:
@@ -490,6 +595,9 @@ resources:
           cluster_name: { get_param: deployment_name }
           pnda_secgroup: { get_param: PndaSecGroup }
           pnda_flavor: { get_param: PndaFlavor }
+{%if create_datanodes_group is equalto 1 %}
+          scheduler_group_hint: { get_resource: DataNodeAAGroup}
+{%endif%}
   opentsdb:
     type: OS::Heat::ResourceGroup
     properties:
