--- a/templates/standard/pnda_cluster.yaml.j2
+++ b/templates/standard/pnda_cluster.yaml.j2
@@ -139,6 +139,7 @@ parameters:
     default: POLL_TEMP_URL
 
 resources:
+{%if create_mgrnodes_group is equalto 1 %}
   MgrAAGroup:
     type: OS::Nova::ServerGroup
     properties:
@@ -149,6 +150,7 @@ resources:
           params:
             cname: { get_param: deployment_name }
       policies: [anti-affinity]
+{%endif%}
 {%if create_zknodes_group is equalto 1 %}
   ZkAAGroup:
     type: OS::Nova::ServerGroup
@@ -440,7 +442,9 @@ resources:
       pnda_secgroup: { get_param: PndaSecGroup }
       cluster_name: { get_param: deployment_name }
       pnda_flavor: { get_param: PndaFlavor }
+{%if create_mgrnodes_group is equalto 1 %}
       scheduler_group_hint: { get_resource: MgrAAGroup}
+{%endif%}
   manager2:
     type: OS::Pnda::manager2
     properties:
@@ -460,7 +464,9 @@ resources:
       pnda_secgroup: { get_param: PndaSecGroup }
       cluster_name: { get_param: deployment_name }
       pnda_flavor: { get_param: PndaFlavor }
+{%if create_mgrnodes_group is equalto 1 %}
       scheduler_group_hint: { get_resource: MgrAAGroup}
+{%endif%}
   manager3:
     type: OS::Pnda::manager3
     properties:
@@ -499,7 +505,9 @@ resources:
       pnda_secgroup: { get_param: PndaSecGroup }
       cluster_name: { get_param: deployment_name }
       pnda_flavor: { get_param: PndaFlavor }
+{%if create_mgrnodes_group is equalto 1 %}
       scheduler_group_hint: { get_resource: MgrAAGroup}
+{%endif%}
   edge:
     type: OS::Pnda::edge
     properties:
