review all flavors in order to match AWS ones

--- a/templates/pico/dn.yaml.j2
+++ b/templates/pico/dn.yaml.j2
@@ -12,7 +12,7 @@ parameters:
   Flavor:
     description: Flavor of the datanode server
     type: string
-    default: m1.xlarge
+    default: ec2.c4.xlarge
   KeyName:
     description: Name of an existing ssh keypair
     type: string
