--- a/templates/pico/bastion.yaml.j2
+++ b/templates/pico/bastion.yaml.j2
@@ -11,7 +11,7 @@ parameters:
   Flavor:
     description: Flavor of the bastion server
     type: string
-    default: m1.small
+    default: ec2.t2.medium
   KeyName:
     description: Name of an existing ssh keypair
     type: string
