--- a/templates/pico/mgr1.yaml.j2
+++ b/templates/pico/mgr1.yaml.j2
@@ -12,7 +12,7 @@ parameters:
   Flavor:
     description: Flavor of the manager1 server
     type: string
-    default: m1.xlarge
+    default: ec2.m3.xlarge
   KeyName:
     description: Name of an existing ssh keypair
     type: string
