--- a/templates/pico/pnda.yaml.j2
+++ b/templates/pico/pnda.yaml.j2
@@ -10,27 +10,27 @@ parameters:
   SaltmasterFlavor:
     type: string
     description: Flavor for the salmaster nodes
-    default: pnda-micro
+    default: ec2.t2.medium
   Manager1Flavor:
     type: string
     description: Flavor for the manager nodes
-    default: pnda-micro
+    default: ec2.m3.xlarge
   EdgeFlavor:
     type: string
     description: Flavor for the edge node
-    default: pnda-micro
+    default: ec2.m3.xlarge
   BastionFlavor:
     type: string
     description: Flavor for the bastion nodes
-    default: pnda-micro
+    default: ec2.t2.medium
   KafkaFlavor:
     type: string
     description: Flavor for the kafka nodes
-    default: pnda-micro
+    default: ec2.m3.large
   DatanodeFlavor:
     type: string
     description: Flavor for the data nodes
-    default: pnda-micro
+    default: ec2.c4.xlarge
   ZookeeperNodes:
     default: '1'
     description: Number of ZOOKEEPER nodes
