--- a/templates/standard/dn.yaml.j2
+++ b/templates/standard/dn.yaml.j2
@@ -8,7 +8,7 @@ parameters:
   Flavor:
     description: Flavor of the datanode server
     type: string
-    default: m1.xlarge
+    default: ec2.m4.2xlarge
   KeyName:
     description: Name of an existing ssh keypair
     type: string
