--- a/templates/standard/kafka.yaml.j2
+++ b/templates/standard/kafka.yaml.j2
@@ -8,7 +8,7 @@ parameters:
   Flavor:
     description: Flavor of the kafka server
     type: string
-    default: m1.small
+    default: ec2.m3.xlarge
   KeyName:
     description: Name of an existing ssh keypair
     type: string
