--- a/templates/pico/pnda.yaml.j2
+++ b/templates/pico/pnda.yaml.j2
@@ -60,6 +60,10 @@ parameters:
   software_config_transport:
     type: string
     default: POLL_TEMP_URL
+  PndaMirror:
+    description: URL of a mirror for operating system package download
+    type: string
+    default: ''
 
 resources:
   pnda_cluster:
