--- a/templates/pico/pnda_cluster.yaml.j2
+++ b/templates/pico/pnda_cluster.yaml.j2
@@ -89,6 +89,10 @@ parameters:
   software_config_transport:
     type: string
     default: POLL_TEMP_URL
+  PndaMirror:
+    description: URL of a mirror for operating system package download
+    type: string
+    default: ''
 
 resources:
 {%if create_network is equalto 1 %}
@@ -151,6 +155,7 @@ resources:
       SaltmasterIP: { get_param: SaltmasterIP }
       cluster_name: { get_param: deployment_name }
       pnda_flavor: { get_param: PndaFlavor }
+      PndaMirror: { get_param: PndaMirror }
 {%endif%}
 
   kafka:
@@ -180,6 +185,7 @@ resources:
           KeyName: { get_param: KeyName }
           cluster_name: { get_param: deployment_name }
           pnda_flavor: { get_param: PndaFlavor }
+          PndaMirror: { get_param: PndaMirror }
 
   manager1:
     type: OS::Pnda::manager1
@@ -202,6 +208,7 @@ resources:
       SaltmasterIP: { get_param: SaltmasterIP }
       cluster_name: { get_param: deployment_name }
       pnda_flavor: { get_param: PndaFlavor }
+      PndaMirror: { get_param: PndaMirror }
 
   edge:
     type: OS::Pnda::edge
@@ -224,6 +231,8 @@ resources:
       cluster_name: { get_param: deployment_name }
       SaltmasterIP: { get_param: SaltmasterIP }
       pnda_flavor: { get_param: PndaFlavor }
+      PndaMirror: { get_param: PndaMirror }
+
   dn:
     type: OS::Heat::ResourceGroup
     properties:
@@ -252,6 +261,7 @@ resources:
           SaltmasterIP: { get_param: SaltmasterIP }
           cluster_name: { get_param: deployment_name }
           pnda_flavor: { get_param: PndaFlavor }
+          PndaMirror: { get_param: PndaMirror }
 
 outputs:
   kafka_hosts:
