--- a/templates/standard/dn.yaml.j2
+++ b/templates/standard/dn.yaml.j2
@@ -2,7 +2,7 @@
 # Specifies which bootstrap script to run to set up this instance type and which roles
 # to apply to this instance type
 
-heat_template_version: 2014-10-16
+heat_template_version: 2015-04-30
 
 parameters:
   Flavor:
@@ -45,6 +45,8 @@ parameters:
   signal_transport:
     type: string
   software_config_transport:
+    type: string
+  pre_config:
     type: string
 {%if create_datanodes_group is equalto 1 %}
   scheduler_group_hint:
@@ -99,6 +101,7 @@ resources:
       security_groups: [{ get_param: sec_group }, { get_param: pnda_secgroup }]
       software_config_transport: { get_param: software_config_transport }
       user_data_format: SOFTWARE_CONFIG
+      user_data: { get_param: pre_config }
       config_drive: True
 {%if create_datanodes_group is equalto 1 %}
       scheduler_hints: 
