--- a/templates/pico/pnda.yaml.j2
+++ b/templates/pico/pnda.yaml.j2
@@ -60,8 +60,26 @@ parameters:
   software_config_transport:
     type: string
     default: POLL_TEMP_URL
+  PndaMirror:
+    description: URL of a mirror for operating system package download
+    type: string
+    default: ''
+  NtpServers:
+    description: NTP servers
+    type: string
+    default: ''
+  name_servers:
+    description: List of name name servers
+    type: comma_delimited_list
 
 resources:
+  pre_config:
+    type: OS::Pnda::preConfig
+    properties:
+      PndaMirror: { get_param: PndaMirror }
+      NtpServers: { get_param: NtpServers }
+      keystone_auth_url: { get_param: keystone_auth_url }
+
   pnda_cluster:
     type: OS::Pnda::cluster
   {%if create_network is equalto 1 %}
@@ -96,6 +114,7 @@ resources:
       DatanodeVolumeSize : { get_param: DatanodeVolumeSize }
       signal_transport: { get_param: signal_transport }
       software_config_transport: { get_param: software_config_transport }
+      pre_config: {get_resource: pre_config}
 
   saltmaster_server:
     type: OS::Nova::Server
@@ -119,4 +138,5 @@ resources:
             '%stackname%': {get_param: 'OS::stack_name'}
       software_config_transport: { get_param: software_config_transport }
       user_data_format: SOFTWARE_CONFIG
+      user_data: { get_resource: pre_config }
       config_drive: True
