--- a/templates/pico/dn.yaml.j2
+++ b/templates/pico/dn.yaml.j2
@@ -81,7 +81,9 @@ resources:
             $flavor$: { get_param: pnda_flavor }
             $master_ip$: { get_param: SaltmasterIP }
             $pnda_cluster$: { get_param: cluster_name }
+{%if create_volumes is equalto 1 %}
             $log_volume_id$: { get_resource: logvolume }
+{%endif%}
             $hdfs_volume_id$: { get_resource: volume }            
             $cloudera_role$: 'DATANODE'
   install_deployment:
