--- a/templates/pico/kafka.yaml.j2
+++ b/templates/pico/kafka.yaml.j2
@@ -79,7 +79,9 @@ resources:
             $master_ip$: { get_param: SaltmasterIP }
             $brokerid$: { get_param: NodeIndex}
             $pnda_cluster$: { get_param: cluster_name }
+{%if create_volumes is equalto 1 %}
             $log_volume_id$: { get_resource: logvolume }
+{%endif%}
             $roles$: 'kafka,kafka_manager,platform_testing_general,elk,zookeeper'
   install_deployment:
     type: OS::Heat::SoftwareDeployment
