Add the github repo url to the whitelist.
Currently the github repo is not mirrored on the pnda mirror, so it
needs to be whitelisted too in the IP tables.
Also, don't put the ip tables reject on the bastion as it is not part of
the pnda cluster.

--- a/templates/pico/bastion.yaml.j2
+++ b/templates/pico/bastion.yaml.j2
@@ -53,8 +53,6 @@ parameters:
     description: URL of a mirror for operating system package download
     type: string
     default: ''
-  pre_config:
-    type: string
 
 resources:
 {%if create_network is equalto 1 %}
@@ -106,6 +104,16 @@ resources:
             $private_key$: { get_param: private_key }
 {%endif%}
             $pnda_cluster$: { get_param: cluster_name }
+  install_deployment:
+    type: OS::Heat::SoftwareDeployment
+    depends_on: bastion_deployment
+    properties:
+      signal_transport: { get_param: signal_transport }
+      config:
+        get_resource: install_config
+      server:
+        get_resource: server
+
   bastion_config:
     type: OS::Heat::SoftwareConfig
     properties:
@@ -118,15 +126,14 @@ resources:
             $private_key$: { get_param: private_key }
 {%endif%}
             $keyname$: { get_param: 'OS::stack_name' }
-
-  server_init:
-    type: OS::Heat::MultipartMime
+  bastion_deployment:
+    type: OS::Heat::SoftwareDeployment
     properties:
-      parts:
-      - config: {get_param: pre_config}
-      - config: {get_resource: install_config}
-      - config: {get_resource: bastion_config}
-
+      signal_transport: { get_param: signal_transport }
+      config:
+        get_resource: bastion_config
+      server:
+        get_resource: server
   server:
     type: OS::Nova::Server
 {%if create_network is equalto 1 %}
@@ -143,7 +150,6 @@ resources:
 {% endif %}
       software_config_transport: { get_param: software_config_transport }
       user_data_format: SOFTWARE_CONFIG
-      user_data: {get_resource: server_init}
       config_drive: True
 
 outputs:
